# volleymeet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  env  pyproject.toml
.github/: pull_request_template.md
attachment-service/: attatchment_service.py
backend/: Dockerfile  app.py  attachments_sql_queries.py  calendars_sql_queries.py  global_functions_sql.py  managedb.py  meetings_sql_queries.py  participants_sql_queries.py  requirements-lock.txt  requirements.txt  test_meeting_api.py
backend/api_routes/: attachment_routes.py  calendar_routes.py  meeting_routes.py  participant_routes.py
backend/attachment_service/: attachment_service.py  attachments_sql_queries.py  attatchment_service.py  dockerfile
backend/calendar_service/: calendars_sql_queries.py  calender_service.py  dockerfile
backend/linkage_service/: dockerfile  linkage_service.py  linkage_sql_queries.py
backend/meeting_service/: dockerfile  (+2 more)
calendar-service/: calender_service.py  dockerfile
calendar_service/: calender_service.py
cli_frontend/: .gitignore  Dockerfile  README.md  main.py  services.py  setup.cfg
database/: db_setup.py
db/: attachment-seed.sql  calendar-seed.sql  linkage-seed.sql  meeting-seed.sql  participant-seed.sql  seed.sql
event_consumers/: Dockerfile  requirements.txt  start_consumers.py
frontend/: Dockerfile  package-lock.json  package.json
meeting-service/: dockerfile  meetings_service.py
meeting_service/: meetings_service.py
message_broker/: definitions.json  rabbitmq.conf
nginx/: nginx.conf
participant-service/: participant_service.py
(+91 files in other folders)
