[tool.poetry]
name = "volleyball-meetings"
version = "0.1.0"
description = "A meeting scheduler developed by Team Volleyball"
authors = ["Joshua Shew <joshua.t.shew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
